--- a/cookbooks/tmux/templates/default/tmux.conf
+++ b/cookbooks/tmux/templates/default/tmux.conf
@@ -22,6 +22,7 @@ bind -n C-left prev
 
 # start window indexing at one instead of zero
 set -g base-index 1
+setw -g pane-base-index 1
 
 # listen for activity on all windows
 set -g bell-action any
