--- a/site-cookbooks/users/templates/default/adwinsky/tmux.conf
+++ b/site-cookbooks/users/templates/default/adwinsky/tmux.conf
@@ -51,11 +51,7 @@ set -g status-fg default
 set -g status-bg default
 set -g status-utf8 on
 set -g status-left-length 50
-<% if mac_os_x? %>
 set -g status-left "#[fg=default]❐ #[fg=brightred]$USER#[fg=default]@#[fg=yellow]#(hostname -s)#[fg=default] [#[fg=green]#S#[fg=default]]"
-<% else %>
-set -g status-left "#[fg=default]❐ #[fg=brightred]$USER#[fg=default]@#[fg=yellow]#(hostname)#[fg=default].#(hostname -d) [#[fg=green]#S#[fg=default]]"
-<% end %>
 set -g status-right "#[fg=default]❐"
 
 # and the notification messages
@@ -63,6 +59,5 @@ set -g message-bg red
 set -g message-fg white
 set -g message-attr bold
 
-<% if !root? %>
-source-file <%= node[:homedir] %>/.tmux.conf.local
-<% end %>
+source-file /Users/adwinsky/.tmux.conf.local
+
